fix wrong color

--- a/docker-cm-dashing/rootfs/opt/coremedia/widgets/list/list.scss
+++ b/docker-cm-dashing/rootfs/opt/coremedia/widgets/list/list.scss
@@ -48,18 +48,18 @@ $label-color:       rgba(255, 255, 255, 0.7);
 
   .green {
     background-color: #44bb77;
-    font-size: 15px;
+/*     font-size: 15px; */
   }
   .yellow {
-    background-color: #44bb77;
-    font-size: 15px;
+    background-color: #ffaa44;
+/*     font-size: 15px; */
   }
   .red {
     background-color: #ff5566;
-    font-size: 15px;
+/*     font-size: 15px; */
   }
   .purple {
     background-color: #aa44ff;
-    font-size: 15px;
+/*     font-size: 15px; */
   }
 }
